('GSM' is Greg Sabino Mullane, greg@turnstep.com)

2.7.0 

	- Support for standard_conforming_strings. [GSM]
	- Add spell checker to tests. [GSM]

2.6.4 Released May 2, 2008 (subversion r11186)

	- More tweaks to the test suite.

2.6.3 Released May 1, 2008 (subversion r11169)

	- Minor tweaks to the test suite.

2.6.2 Released April 30, 2008 (subversion r11161)

	- Fix coredump when pg_getcopydata copies 0 rows into a 
		freshly created var. (CPAN bug #35556) [David Harris]
	- Allow 'make test' create a test database from scratch if
		it cannot find an existing one to use. [GSM]

2.6.1 Released April 22, 2008 (subversion r11133)

	- Don't free placeholder section, fixes problem when using 
		more than one named placeholder with the same name.
		(CPAN bug #35303) [GSM]

2.6.0 Released April 16, 2008 (subversion r11095)

	- Make pg_notifies a true function, so that you can now
		use $dbh->pg_notifies instead of $dbh->func('pg_notifies') [GSM]
	- Various performance improvements [GSM]
	- Fix minor build and compilation issues with Strawberry Perl [GSM]
	- Add Bundle::DBD::Pg [GSM]

2.5.1 Released April 7, 2008 (subversion r11056)

	- Correctly handle negative PID numbers on Win32 systems when
		generating prepared statement names (CPAN bug # 34738) [GSM]

2.5.0 Released March 23, 2008 (subversion r10990)

	- Add pg_enum_values to $dbh->column_info()
		[Dave Rolsky] (CPAN ticket #34351)
	- Minor test fixes.

2.4.0 Released March 21, 2008 (subversion r10974)

	- Remove problematic and unneeded Test::Warn test from 00basic.t.
	- Add $sth->{pg_current_row} [GSM]

2.3.0 Released March 19, 2008 (subversion r10951)

	- Add $sth->{pg_bound} and $sth->{pg_numbound} [GSM]
	- Fix broken call to $sth->{pg_segments} [GSM]

2.2.2 Released March 3, 2008 (subversion r10873)

	- Remove non-working tracing from types.c and quote.c

	- Add parse_trace_flag as statement handle method.

2.2.1 Released March 1, 2008 (subversion r10865)

	- Fix memory leaks in dbdimp.c (CPAN bug #33743)